<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolBar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:contentInsetStart="@dimen/content_inset_margin_0dp"
    android:contentInsetLeft="@dimen/content_inset_margin_0dp"
    android:contentInsetEnd="@dimen/content_inset_margin_0dp"
    android:contentInsetRight="@dimen/content_inset_margin_0dp"
    android:translationZ="@dimen/translation_z_margin_15dp"
    app:contentInsetEnd="@dimen/content_inset_margin_0dp"
    app:contentInsetLeft="@dimen/content_inset_margin_0dp"
    app:contentInsetRight="@dimen/content_inset_margin_0dp"
    app:contentInsetStart="@dimen/content_inset_margin_0dp"
    app:popupTheme="@style/AppTheme.PopupOverlay">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textAppearance="@style/titleBarText" />

</androidx.appcompat.widget.Toolbar>